# aur_checker

./: .gitignore  LICENSE.md  README.md  SECURITY.md  __main__.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: ci.yml  codeql.yml
ai/: client.py  contract.py
cache/: __init__.py  store.py
cli/: __init__.py  batch.py  check.py  clear_cache.py  explain.py  install.py  report.py  root.py
compat_platform/: __init__.py  detect.py  paths.py
core/: context.py  pipeline.py
features/: __init__.py  extractor.py
output/: __init__.py  human.py  json.py
scanner/: __init__.py  fetch.py  metadata.py
scoring/: __init__.py  engine.py
tests/: test_scoring.py
